system/gatekeeper/templates/constraint-resource-limits.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: gkresourcelimits
spec:
  crd:
    spec:
      names:
        kind: GkResourceLimits
      validation:
        openAPIV3Schema:
          properties: {}

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package resourcelimits

        resource_types["cpu"]
        resource_types["memory"]

        missing_limits[{"container": container.name, "type": resource_type}] {
            container := input.review.object.spec.containers[_]
            limits := object.get(container.resources, "limits", {})
            resource_type := resource_types[_]
            object.get(limits, resource_type, "") == ""
        }

        violation[{"msg": msg}] {
            input.review.object.kind == "Pod"
            count(missing_limits) > 0

            msg := "cpu and memory limits not set on some or all containers"
            # msg := sprintf("no %s limit set for container %q", [resource_type, container.name])
            #
            # ^ I would like to have this detailed message, but right now, this
            # would generate such a bafflingly large amount of violations that
            # Gatekeeper would not be able to report them all. I'd rather have
            # *something* reported for as many pods as possible, even if it
            # means sacrificing accuracy.
            # TODO: enable the more detailed message once we are down to 100 violations or less
        }
